@@ -4,6 +4,13 @@ Version 1.6.16
 
 2012-03-18 Fabrice Fontaine <fabrice.fontaine(at)orange.com>
 
+	Replace sprintf by snprintf in http_WriteHttpPost
+
+	Replace sprintf by snprintf in http_WriteHttpPost to avoid buffer
+	overflow.
+
+2012-03-18 Fabrice Fontaine <fabrice.fontaine(at)orange.com>
+
 	Add infoSize parameter to get_sdk_info
 
 	Add infoSize parameter to get_sdk_info function to replace sprintf call
